# ffmpeg

./: README.md  ffmpeg.py  pyproject.toml  requirements.txt
ffmpeg/: __init__.py  chapters.py  encoders.py  ffmpeg.py  file_extensions.py
